--- a/Dia 3/styles.css
+++ b/Dia 3/styles.css
@@ -18,7 +18,7 @@
     justify-content: center;
     background-color:rgb(80, 255, 147);
     padding: 30px 10px 15px;
-    margin-left: 100px;
+    margin-left: 30px;
     border: solid 1px;
     border-radius: 10px;
     width: 320px;
@@ -38,4 +38,14 @@
     border-radius: 10px;
     padding: 30px 20px 30px 10px;
     margin-left: 15px
+}
+
+/* --------------TABLAS-------------- */
+
+table{
+    border:solid 2px;
+    border-radius: 8px;
+    margin-left: 30px;
+    margin-top: 30px;
+    padding: 8px;
 }
