--- a/practica 2/styles.css
+++ b/practica 2/styles.css
@@ -13,13 +13,13 @@ body {
 }
 
 #Form-Artbeats {
-  background-color: black;
-  padding: 10px;
+  background-color: #141414;
+  padding: 20px;
   border-radius: 15px;
   box-shadow: 10px 10px 20px 15px rgba(2, 0, 0, 0.5);
-  opacity: 0.8;
+  opacity: 0.9;
   width: 250px;
-  height: 515px;
+  height: 530px;
   border-color: white;
 }
 
@@ -31,8 +31,8 @@ body {
 }
 
 .logo img {
-  width: 220px;
-  height: 180px;
+  width: 260px;
+  height: 160px;
 }
 
 /* ------------PARRAFO-------------- */
@@ -61,7 +61,7 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px; /* Espacio entre inputs */
+  gap: 8px;
   margin: 10px 0;
 }
 
@@ -81,8 +81,8 @@ h4 {
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-top: 35px;
+    margin-bottom: 15px;
 }
 
 .registro {
