--- a/Dia 2/styles.css
+++ b/Dia 2/styles.css
@@ -1,24 +1,101 @@
 body {
-    background-color:rgb(247, 210, 3);
-}
-header {
-    display: flex;
-    align-items: center; 
-    justify-content: space-between; 
-    background-color: rgb(196, 41, 2);
-    color: white;
-}
-ul {
-    display: flex;
-    gap: 20px; 
-    align-items: center;
-    list-style: none;
-    font-size: 15px;
+    padding: 0;
+    margin: 0;
+    background-color: rgb(250, 234, 144);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#2 {
+header {
     display: flex;
     align-items: center;
+    gap: 200px;
+    background-color: rgb(248, 132, 0);
+    color: white;
+    padding: 20px;
+}
+
+header ul {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+    margin: 10px 0;
+}
+
+p {
+    font-size: 20px;
+    text-align: center;
+}
+
+.subtitulos {
+    padding: 10px 0;
+    font-size: 25px;
+}
+
+h2 {
     color: red;
+    text-align: center;
+}
+
+h3 {
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+}
+
+.top1-3 {
+    display: flex;
+    background-color: rgb(253, 196, 130);
+    border-radius: 15px;
+    padding: 10px 80px;
+    margin: 30px 40px;
+    left: 40px;
+    gap: 60px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: transform 0.3s ease;
+    text-align: center;
+}
+
+.top4-6 {
+    display: flex;
+    background-color: rgb(253, 196, 130);
+    border-radius: 15px;
+    padding: 10px 40px;
+    margin: 30px 40px;
+    gap: 50px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: transform 0.3s ease;
+    text-align: center;
+}
+
+.top7-9 {
+    display: flex;
+    background-color: rgb(253, 196, 130);
+    border-radius: 15px;
+    padding: 10px 40px;
+    margin: 30px 40px;
+    gap: 80px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: transform 0.3s ease;
+    text-align: center;
+}
+
+.top10-12 {
+    background-color: rgb(253, 196, 130);
+    border-radius: 15px;
+    padding: 10px 20px;
+    margin: 20px 500px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    text-align: center;
+}
+
+.pelicula:hover {
+    transform: scale(1.05);
 }
 
