--- a/Dia 5/Practica Noticias/styleNew.css
+++ b/Dia 5/Practica Noticias/styleNew.css
@@ -1,78 +1,161 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
 }
 
 html,
 body {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /*  align-items: center; */
+  flex-direction: column;
+}
+
+html,
+body {
+  overflow-x: hidden;
 }
 
 .cabecera {
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: orange;
-    color: black;
-    align-items: center;
-    font-size: 30px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: orange;
+  color: black;
+  align-items: center;
+  font-size: 20px;
+  border: solid 2px rgb(252, 95, 38);
 }
 
-.menu {
-    padding-top: 30px;
-    display: flex;
-    gap: 80px;
-    justify-content: center;
-    font-size: 20px;
-    margin: 0 0 0 30px;
+.cabecera {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
+
+.menu nav {
+  width: 100%;
+  padding: 10px 10px;
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  gap: 60px;
+  background-color: rgb(243, 243, 91);
+  border: solid 2px rgb(252, 173, 3);
+}
+
+/* ---------Img news -------------- */
 
 .contenedor-img {
-    padding: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 30px;
+  gap: 40px; /* separación entre imágenes y texto */
 }
+
 .news1 {
-    position: relative;
-    top: 30px;
-    left: 300px;
-    width: 250px;
-    height: 350px;
-    z-index: 1;
-    border: solid 2px;
+  position: fixed;
+  top: 220px;
+  left: 250px;
+  width: 180px;
+  height: 250px;
+  z-index: 1;
+  border: solid 2px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .news1 img {
-    width: 250px;
-    height: 350px;
+  width: 100%;
+  height: 100%;
 }
 
 .news2 {
-    position: absolute;
-    top: 500px;
-    left: 50px;
-    width: 350px;
-    height: 220px;
-    border: solid 2px;
+  position: fixed;
+  top: 400px;
+  left: 50px;
+  width: 250px;
+  height: 160px;
+  border: solid 2px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .news2 img {
-    width: 350px;
-    height: 220px;
+  width: 100%;
+  height: 100%;
 }
 
 .news3 {
-    position: absolute;
-    top: 430px;
-    left: 530px;
-    width: 320px;
-    height: 220px;
-    border: solid 2px;
+  position: fixed;
+  top: 380px;
+  left: 380px;
+  width: 240px;
+  height: 160px;
+  border: solid 2px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .news3 img {
-    width: 320px;
-    height: 220px;
+  width: 100%;
+  height: 100%;
+}
+
+.news4 {
+  position: fixed;
+  width: 160px;
+  height: 160px;
+  left: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.news4 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.news5 {
+  position: fixed;
+  width: 160px;
+  height: 160px;
+  left: 460px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.news5 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* --------------- FLEX ------------*/
+
+.News-parrafo {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 30px;
+  padding: 10px;
+}
+
+.Noticia-p {
+  width: 45%;
+  column-count: 2;
+  column-gap: 30px;
+  text-align: justify;
+  padding: 20px;
+  background-color: #ffffe9;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
