--- a/practica-MP/output.css
+++ b/practica-MP/output.css
@@ -8,6 +8,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-300: oklch(80.8% 0.114 19.571);
+    --color-red-400: oklch(70.4% 0.191 22.216);
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
@@ -22,6 +23,7 @@
     --color-yellow-300: oklch(90.5% 0.182 98.111);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-yellow-500: oklch(79.5% 0.184 86.047);
+    --color-green-200: oklch(92.5% 0.084 155.995);
     --color-green-400: oklch(79.2% 0.209 151.711);
     --color-green-500: oklch(72.3% 0.219 149.579);
     --color-green-600: oklch(62.7% 0.194 149.214);
@@ -37,6 +39,7 @@
     --color-sky-300: oklch(82.8% 0.111 230.318);
     --color-sky-400: oklch(74.6% 0.16 232.661);
     --color-blue-300: oklch(80.9% 0.105 251.813);
+    --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
@@ -66,7 +69,6 @@
     --container-md: 28rem;
     --container-lg: 32rem;
     --container-xl: 36rem;
-    --container-3xl: 48rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -101,7 +103,6 @@
     --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
-    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -271,9 +272,6 @@
   .relative {
     position: relative;
   }
-  .inset-0 {
-    inset: calc(var(--spacing) * 0);
-  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -285,12 +283,6 @@
   }
   .left-0\.5 {
     left: calc(var(--spacing) * 0.5);
-  }
-  .z-0 {
-    z-index: 0;
-  }
-  .z-10 {
-    z-index: 10;
   }
   .order-1 {
     order: 1;
@@ -367,9 +359,6 @@
   .m-6 {
     margin: calc(var(--spacing) * 6);
   }
-  .m-8 {
-    margin: calc(var(--spacing) * 8);
-  }
   .m-12 {
     margin: calc(var(--spacing) * 12);
   }
@@ -378,9 +367,6 @@
   }
   .m-\[80px\] {
     margin: 80px;
-  }
-  .m-\[600px\] {
-    margin: 600px;
   }
   .m-auto {
     margin: auto;
@@ -400,8 +386,8 @@
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
-  .mr-6 {
-    margin-right: calc(var(--spacing) * 6);
+  .mt-\[70px\] {
+    margin-top: 70px;
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
@@ -412,8 +398,8 @@
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
   }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
+  .mb-9 {
+    margin-bottom: calc(var(--spacing) * 9);
   }
   .mb-\[40px\] {
     margin-bottom: 40px;
@@ -457,10 +443,6 @@
   .size-2\.5 {
     width: calc(var(--spacing) * 2.5);
     height: calc(var(--spacing) * 2.5);
-  }
-  .size-250 {
-    width: calc(var(--spacing) * 250);
-    height: calc(var(--spacing) * 250);
   }
   .size-full {
     width: 100%;
@@ -514,14 +496,8 @@
   .h-92 {
     height: calc(var(--spacing) * 92);
   }
-  .h-250 {
-    height: calc(var(--spacing) * 250);
-  }
   .h-914 {
     height: calc(var(--spacing) * 914);
-  }
-  .h-\[00px\] {
-    height: 00px;
   }
   .h-\[5\%\] {
     height: 5%;
@@ -565,41 +541,14 @@
   .h-\[100px\] {
     height: 100px;
   }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-\[210px\] {
-    height: 210px;
-  }
-  .h-\[240px\] {
-    height: 240px;
-  }
-  .h-\[250px\] {
-    height: 250px;
-  }
-  .h-\[260px\] {
-    height: 260px;
-  }
-  .h-\[270px\] {
-    height: 270px;
-  }
-  .h-\[280px\] {
-    height: 280px;
-  }
   .h-\[300px\] {
     height: 300px;
   }
   .h-\[400px\] {
     height: 400px;
   }
-  .h-\[450px\] {
-    height: 450px;
-  }
   .h-\[500px\] {
     height: 500px;
-  }
-  .h-\[550px\] {
-    height: 550px;
   }
   .h-auto {
     height: auto;
@@ -615,9 +564,6 @@
   }
   .w-0 {
     width: calc(var(--spacing) * 0);
-  }
-  .w-3xl {
-    width: var(--container-3xl);
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
@@ -655,17 +601,8 @@
   .w-64 {
     width: calc(var(--spacing) * 64);
   }
-  .w-90 {
-    width: calc(var(--spacing) * 90);
-  }
-  .w-\[00px\] {
-    width: 00px;
-  }
   .w-\[10\%\] {
     width: 10%;
-  }
-  .w-\[40\%\] {
-    width: 40%;
   }
   .w-\[50px\] {
     width: 50px;
@@ -685,56 +622,14 @@
   .w-\[200px\] {
     width: 200px;
   }
-  .w-\[210px\] {
-    width: 210px;
-  }
-  .w-\[240px\] {
-    width: 240px;
-  }
-  .w-\[250px\] {
-    width: 250px;
-  }
-  .w-\[260px\] {
-    width: 260px;
-  }
-  .w-\[270px\] {
-    width: 270px;
-  }
-  .w-\[280px\] {
-    width: 280px;
-  }
-  .w-\[280x\] {
-    width: 280x;
-  }
   .w-\[300px\] {
     width: 300px;
-  }
-  .w-\[304px\] {
-    width: 304px;
   }
   .w-\[396px\] {
     width: 396px;
   }
-  .w-\[400px\] {
-    width: 400px;
-  }
-  .w-\[450px\] {
-    width: 450px;
-  }
-  .w-\[500px\] {
-    width: 500px;
-  }
-  .w-\[550px\] {
-    width: 550px;
-  }
   .w-\[900px\] {
     width: 900px;
-  }
-  .w-\[2408x\] {
-    width: 2408x;
-  }
-  .w-\[px\] {
-    width: px;
   }
   .w-full {
     width: 100%;
@@ -773,24 +668,6 @@
     --tw-scale-x: 0%;
     --tw-scale-y: 0%;
     --tw-scale-z: 0%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-50 {
-    --tw-scale-x: 50%;
-    --tw-scale-y: 50%;
-    --tw-scale-z: 50%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-100 {
-    --tw-scale-x: 100%;
-    --tw-scale-y: 100%;
-    --tw-scale-z: 100%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-150 {
-    --tw-scale-x: 150%;
-    --tw-scale-y: 150%;
-    --tw-scale-z: 150%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .transform {
@@ -850,6 +727,9 @@
   .justify-end {
     justify-content: flex-end;
   }
+  .justify-start {
+    justify-content: flex-start;
+  }
   .justify-items-center {
     justify-items: center;
   }
@@ -885,9 +765,6 @@
   }
   .gap-12 {
     gap: calc(var(--spacing) * 12);
-  }
-  .gap-15 {
-    gap: calc(var(--spacing) * 15);
   }
   .space-y-2 {
     :where(& > :not(:last-child)) {
@@ -953,10 +830,6 @@
     border-style: var(--tw-border-style);
     border-width: 4px;
   }
-  .border-\[4px\] {
-    border-style: var(--tw-border-style);
-    border-width: 4px;
-  }
   .border-\[6px\] {
     border-style: var(--tw-border-style);
     border-width: 6px;
@@ -977,131 +850,8 @@
     border-left-style: var(--tw-border-style);
     border-left-width: 50px;
   }
-  .border-\[rgb\(31\,118\,121\)\] {
-    border-color: rgb(31,118,121);
-  }
-  .border-\[rgb\(31\,121\,91\)\] {
-    border-color: rgb(31,121,91);
-  }
-  .border-\[rgb\(62\,32\,82\)\] {
-    border-color: rgb(62,32,82);
-  }
-  .border-\[rgb\(63\,32\,82\)\] {
-    border-color: rgb(63,32,82);
-  }
-  .border-\[rgb\(65\,247\,253\)\] {
-    border-color: rgb(65,247,253);
-  }
-  .border-\[rgb\(80\,248\,65\)\] {
-    border-color: rgb(80,248,65);
-  }
-  .border-\[rgb\(82\,32\,61\)\] {
-    border-color: rgb(82,32,61);
-  }
-  .border-\[rgb\(83\,42\,110\)\] {
-    border-color: rgb(83,42,110);
-  }
-  .border-\[rgb\(84\,44\,110\)\] {
-    border-color: rgb(84,44,110);
-  }
-  .border-\[rgb\(85\,31\,121\)\] {
-    border-color: rgb(85,31,121);
-  }
-  .border-\[rgb\(95\,36\,134\)\] {
-    border-color: rgb(95,36,134);
-  }
-  .border-\[rgb\(98\,49\,131\)\] {
-    border-color: rgb(98,49,131);
-  }
-  .border-\[rgb\(103\,31\,121\)\] {
-    border-color: rgb(103,31,121);
-  }
-  .border-\[rgb\(132\,68\,175\)\] {
-    border-color: rgb(132,68,175);
-  }
-  .border-\[rgb\(196\,65\,248\)\] {
-    border-color: rgb(196,65,248);
-  }
-  .border-\[rgb\(204\,252\,253\)\] {
-    border-color: rgb(204,252,253);
-  }
-  .border-\[rgb\(208\,253\,204\)\] {
-    border-color: rgb(208,253,204);
-  }
-  .border-\[rgb\(236\,233\,238\)\] {
-    border-color: rgb(236,233,238);
-  }
-  .border-\[rgba\(25\,23\,58\,0\.66\)\] {
-    border-color: rgba(25,23,58,0.66);
-  }
-  .border-\[rgba\(37\,27\,80\,0\.66\)\] {
-    border-color: rgba(37,27,80,0.66);
-  }
   .border-\[rgba\(41\,37\,95\,0\.66\)\] {
     border-color: rgba(41,37,95,0.66);
-  }
-  .border-\[rgba\(44\,23\,58\,0\.66\)\] {
-    border-color: rgba(44,23,58,0.66);
-  }
-  .border-\[rgba\(56\,27\,80\,0\.66\)\] {
-    border-color: rgba(56,27,80,0.66);
-  }
-  .border-\[rgba\(57\,29\,75\,0\.66\)\] {
-    border-color: rgba(57,29,75,0.66);
-  }
-  .border-\[rgba\(63\,32\,82\,0\.66\)\] {
-    border-color: rgba(63,32,82,0.66);
-  }
-  .border-\[rgba\(63\,32\,82\,0\.77\)\] {
-    border-color: rgba(63,32,82,0.77);
-  }
-  .border-\[rgba\(65\,36\,88\,0\.66\)\] {
-    border-color: rgba(65,36,88,0.66);
-  }
-  .border-\[rgba\(69\,36\,88\,0\.66\)\] {
-    border-color: rgba(69,36,88,0.66);
-  }
-  .border-\[rgba\(74\,40\,102\,0\.66\)\] {
-    border-color: rgba(74,40,102,0.66);
-  }
-  .border-\[rgba\(74\,177\,172\,0\.66\)\] {
-    border-color: rgba(74,177,172,0.66);
-  }
-  .border-\[rgba\(78\,40\,104\,0\.66\)\] {
-    border-color: rgba(78,40,104,0.66);
-  }
-  .border-\[rgba\(84\,40\,102\,0\.66\)\] {
-    border-color: rgba(84,40,102,0.66);
-  }
-  .border-\[rgba\(92\,49\,121\,0\.66\)\] {
-    border-color: rgba(92,49,121,0.66);
-  }
-  .border-\[rgba\(93\,50\,110\,0\.66\)\] {
-    border-color: rgba(93,50,110,0.66);
-  }
-  .border-\[rgba\(98\,48\,117\,0\.66\)\] {
-    border-color: rgba(98,48,117,0.66);
-  }
-  .border-\[rgba\(148\,74\,177\,0\.66\)\] {
-    border-color: rgba(148,74,177,0.66);
-  }
-  .border-\[rgba\(170\,231\,228\,0\.66\)\] {
-    border-color: rgba(170,231,228,0.66);
-  }
-  .border-\[rgba\(196\,65\,248\,0\.66\)\] {
-    border-color: rgba(196,65,248,0.66);
-  }
-  .border-\[rgba\(201\,154\,219\,0\.66\)\] {
-    border-color: rgba(201,154,219,0.66);
-  }
-  .border-\[rgba\(204\,252\,253\,0\.44\)\] {
-    border-color: rgba(204,252,253,0.44);
-  }
-  .border-\[rgba\(204\,252\,253\,0\.65\)\] {
-    border-color: rgba(204,252,253,0.65);
-  }
-  .border-\[rgba\(207\,170\,231\,0\.66\)\] {
-    border-color: rgba(207,170,231,0.66);
   }
   .border-black {
     border-color: var(--color-black);
@@ -1241,6 +991,9 @@
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
+  .bg-red-600 {
+    background-color: var(--color-red-600);
+  }
   .bg-sky-300 {
     background-color: var(--color-sky-300);
   }
@@ -1261,6 +1014,10 @@
   }
   .bg-yellow-300 {
     background-color: var(--color-yellow-300);
+  }
+  .bg-gradient-to-b {
+    --tw-gradient-position: to bottom in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
   }
   .bg-\[url\(\'\.\/img\/1\.jpg\'\)\] {
     background-image: url('./img/1.jpg');
@@ -1285,6 +1042,14 @@
   }
   .bg-\[url\(\'\.\/jpg\/compu2\.jpg\'\)\] {
     background-image: url('./jpg/compu2.jpg');
+  }
+  .from-\[\#3b2b8c\] {
+    --tw-gradient-from: #3b2b8c;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#7265d7\] {
+    --tw-gradient-to: #7265d7;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .bg-cover {
     background-size: cover;
@@ -1346,23 +1111,17 @@
   .px-16 {
     padding-inline: calc(var(--spacing) * 16);
   }
-  .py-1 {
-    padding-block: calc(var(--spacing) * 1);
-  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
-  }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
-  }
-  .py-16 {
-    padding-block: calc(var(--spacing) * 16);
   }
   .py-\[10px\] {
     padding-block: 10px;
@@ -1372,9 +1131,6 @@
   }
   .py-\[40px\] {
     padding-block: 40px;
-  }
-  .py-\[60px\] {
-    padding-block: 60px;
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -1466,6 +1222,9 @@
   .text-white {
     color: var(--color-white);
   }
+  .text-yellow-400 {
+    color: var(--color-yellow-400);
+  }
   .text-yellow-500 {
     color: var(--color-yellow-500);
   }
@@ -1474,10 +1233,6 @@
   }
   .underline {
     text-decoration-line: underline;
-  }
-  .shadow {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
@@ -1508,11 +1263,6 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .transition-all {
-    transition-property: all;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
   .transition-colors {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -1531,26 +1281,12 @@
     --tw-duration: 500ms;
     transition-duration: 500ms;
   }
-  .ease-in-out {
-    --tw-ease: var(--ease-in-out);
-    transition-timing-function: var(--ease-in-out);
-  }
   .group-hover\:scale-100 {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         --tw-scale-x: 100%;
         --tw-scale-y: 100%;
         --tw-scale-z: 100%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .group-hover\:scale-110 {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        --tw-scale-x: 110%;
-        --tw-scale-y: 110%;
-        --tw-scale-z: 110%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
       }
     }
@@ -1601,26 +1337,6 @@
       }
     }
   }
-  .hover\:scale-120 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 120%;
-        --tw-scale-y: 120%;
-        --tw-scale-z: 120%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-150 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 150%;
-        --tw-scale-y: 150%;
-        --tw-scale-z: 150%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
   .hover\:bg-\[\#3b5998\]\/90 {
     &:hover {
       @media (hover: hover) {
@@ -1649,10 +1365,10 @@
       }
     }
   }
-  .hover\:bg-gray-200 {
+  .hover\:bg-green-600 {
     &:hover {
       @media (hover: hover) {
-        background-color: var(--color-gray-200);
+        background-color: var(--color-green-600);
       }
     }
   }
@@ -1660,13 +1376,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-white);
-      }
-    }
-  }
-  .hover\:bg-yellow-200 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-yellow-200);
       }
     }
   }
@@ -1874,11 +1583,6 @@
       grid-column: span 2 / span 2;
     }
   }
-  .md\:mt-0 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 0);
-    }
-  }
   .md\:mb-0 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * 0);
@@ -1925,39 +1629,9 @@
       height: 35%;
     }
   }
-  .md\:h-\[100px\] {
-    @media (width >= 48rem) {
-      height: 100px;
-    }
-  }
-  .md\:h-\[200px\] {
-    @media (width >= 48rem) {
-      height: 200px;
-    }
-  }
-  .md\:h-\[250px\] {
-    @media (width >= 48rem) {
-      height: 250px;
-    }
-  }
-  .md\:h-\[270px\] {
-    @media (width >= 48rem) {
-      height: 270px;
-    }
-  }
-  .md\:h-\[280px\] {
-    @media (width >= 48rem) {
-      height: 280px;
-    }
-  }
   .md\:h-\[300px\] {
     @media (width >= 48rem) {
       height: 300px;
-    }
-  }
-  .md\:h-\[400px\] {
-    @media (width >= 48rem) {
-      height: 400px;
     }
   }
   .md\:h-auto {
@@ -1990,39 +1664,9 @@
       width: 75%;
     }
   }
-  .md\:w-\[100px\] {
-    @media (width >= 48rem) {
-      width: 100px;
-    }
-  }
-  .md\:w-\[200px\] {
-    @media (width >= 48rem) {
-      width: 200px;
-    }
-  }
-  .md\:w-\[250px\] {
-    @media (width >= 48rem) {
-      width: 250px;
-    }
-  }
-  .md\:w-\[270px\] {
-    @media (width >= 48rem) {
-      width: 270px;
-    }
-  }
-  .md\:w-\[280px\] {
-    @media (width >= 48rem) {
-      width: 280px;
-    }
-  }
   .md\:w-\[300px\] {
     @media (width >= 48rem) {
       width: 300px;
-    }
-  }
-  .md\:w-\[400px\] {
-    @media (width >= 48rem) {
-      width: 400px;
     }
   }
   .md\:max-w-lg {
@@ -2115,24 +1759,9 @@
       padding: calc(var(--spacing) * 4);
     }
   }
-  .md\:px-2 {
-    @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 2);
-    }
-  }
-  .md\:px-8 {
-    @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 8);
-    }
-  }
   .md\:px-10 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:px-16 {
-    @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 16);
     }
   }
   .md\:pt-4 {
@@ -2176,6 +1805,12 @@
     @media (width >= 48rem) {
       font-size: var(--text-base);
       line-height: var(--tw-leading, var(--text-base--line-height));
+    }
+  }
+  .md\:text-lg {
+    @media (width >= 48rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
   .lg\:w-1\/2 {
@@ -2409,6 +2044,48 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-gradient-position {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
 @property --tw-leading {
   syntax: "*";
   inherits: false;
@@ -2491,10 +2168,6 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-ease {
-  syntax: "*";
-  inherits: false;
-}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
@@ -2524,6 +2197,15 @@
       --tw-space-y-reverse: 0;
       --tw-space-x-reverse: 0;
       --tw-border-style: solid;
+      --tw-gradient-position: initial;
+      --tw-gradient-from: #0000;
+      --tw-gradient-via: #0000;
+      --tw-gradient-to: #0000;
+      --tw-gradient-stops: initial;
+      --tw-gradient-via-stops: initial;
+      --tw-gradient-from-position: 0%;
+      --tw-gradient-via-position: 50%;
+      --tw-gradient-to-position: 100%;
       --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-shadow: 0 0 #0000;
@@ -2542,7 +2224,6 @@
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
       --tw-duration: initial;
-      --tw-ease: initial;
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
