--- a/practica-MP/Estilo/styles.css
+++ b/practica-MP/Estilo/styles.css
@@ -32,23 +32,4 @@ header {
   z-index: 1;
 }
 
-/* ========== Nuestros Servicios =========== */
-
-.servicio-ind {
-  width: 100%;
-  max-width: 320px;
-  margin: auto;
-}
-
-.servicio-ind img {
-  width: 90%;
-}
-
-.servicio-ind h3 {
-  margin: 10px 0;
-}
-
-.servicio-ind p {
-  font-weight: 300;
-  text-align: justify;
-}
+/* ============================ */
